// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render api-SearchHitItem correctly 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      nationalComponent={false}
      publisher={
        Object {
          "id": "974760673",
          "name": "REGISTERENHETEN I BRØNNØYSUND",
          "orgPath": "/STAT/912660680/974760673",
          "prefLabel": Object {
            "no": "Brønnøysundregistrene",
          },
          "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
        }
      }
      publisherItems={null}
      publisherLabel="Provider:"
      publisherTag="span"
      tag="h2"
      theme={null}
      title="REST-API for Kontakt- og reserversjonsregisteret (KRR)"
      titleLink="/apis/24fa3668-6ada-4a50-804e-1396f8470a24"
    />
  </header>
  <div
    className="fdk-text-size-medium"
  >
    <div
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api
    </div>
    Dette er eit REST-API for å tilby funksjonalitet tilsvarende dagens SOAP-baserte oppslagstjeneste for KRR. ...
  </div>
  <div
    className="mb-2"
  >
    <strong>
      Format
      : 
    </strong>
    <span
      key="0"
    >
      application/json
    </span>
    <span
      key="1"
    >
      , 
      application/jose
    </span>
    <span
      key="2"
    >
      , 
      */*
    </span>
  </div>
</article>
`;

exports[`should render api-SearchHitItem correctly with no props 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
</article>
`;

exports[`should render api-SearchHitItem with long description 1`] = `
<article
  className="search-hit"
>
  <span
    aria-hidden="false"
    className="uu-invisible"
  >
    Søketreff.
  </span>
  <header>
    <SearchHitHeader
      nationalComponent={false}
      publisher={null}
      publisherItems={null}
      publisherLabel="Provider:"
      publisherTag="span"
      tag="h2"
      theme={null}
      title="National Data Directory Search API"
      titleLink="/apis/32690443-e926-4e52-9988-dbac45085102"
    />
  </header>
  <div
    className="fdk-text-size-medium"
  >
    <div
      aria-hidden="false"
      className="uu-invisible"
    >
      Beskrivelse av api
    </div>
    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, ...
  </div>
</article>
`;
